bul icon problem fixed

--- a/genel-ozellikler/dinobot-ai.mdx
+++ b/genel-ozellikler/dinobot-ai.mdx
@@ -11,7 +11,7 @@ DinoBot, projenizin verileriyle ilgili sorular sorabileceğiniz, analizler yapab
   <Card title="Hızlı Erişim Paneli" icon="lightning-bolt">
     Herhangi bir sayfadayken hızlıca soru sormak için tasarlanmıştır.
     - **Klavye Kısayolu:** `CTRL + J` (Windows) veya `⌘ + J` (macOS)
-    - **Arayüz Yolu:** Sağ menünün en altındaki **Dinozor ikonu** (`/img/chatbotLogo.svg`) üzerine tıklayın.
+    - **Arayüz Yolu:** Sağ menünün en altındaki **Bul ikonu** (<img src="/images/chatBot.svg" alt="chatbot" className="inline align-middle dark:invert" style={{width: '16px', height: '16px', margin: 0}} />) üzerine tıklayın.
   </Card>
   <Card title="Tam Sayfa Sohbet Arayüzü" icon="chat-outline" href="/yapay-zeka/ai-sohbet-sayfasi">
     Daha karmaşık analizler ve odaklanmış bir çalışma alanı için özel bir sohbet sayfasıdır.
