--- a/navigasyon/sag-menu-ve-baglamsal-araclar.mdx
+++ b/navigasyon/sag-menu-ve-baglamsal-araclar.mdx
@@ -25,7 +25,7 @@ Sağ menü genellikle aşağıdaki bölümlerden oluşur:
     - **Örnek (Proje Ayarları):** "İş Kırılım Yapısı" sayfasındayken, "Maliyet Kodu" ve "Maliyet Tipi" arasında geçiş yapmanızı sağlayan bir alt menü bulunur.
   </Accordion>
   <Accordion title="DinoBot AI Hızlı Erişim">
-    Sağ menünün en altında, **Dinozor ikonu** (`/img/chatbotLogo.svg`) bulunur. Bu ikona tıklayarak [DinoBot AI Asistanı](/genel-ozellikler/dinobot-ai) açabilirsiniz.
+    Sağ menünün en altında, **Bul ikonu** (<img src="/images/chatBot.svg" alt="chatbot" className="inline align-middle dark:invert" style={{width: '16px', height: '16px', margin: 0}} />) bulunur. Bu ikona tıklayarak [DinoBot AI Asistanı](/genel-ozellikler/dinobot-ai) açabilirsiniz.
   </Accordion>
 </AccordionGroup>
 
